Add CloudFormation deployment and cleanup scripts for RAG system
- Introduced `cleanup-cfn.sh` for automated removal of CloudFormation stack and associated resources, ensuring easy cleanup after deployment.
- Added `.gitignore` to exclude `.pem` files from version control.
- Created `deploy-cfn.sh` for streamlined deployment of the RAG infrastructure using CloudFormation, including prerequisite checks and deployment commands.
- Enhanced `README.md` with detailed instructions on deployment and cleanup processes, emphasizing the use of CloudFormation for infrastructure management.

--- a/rag-cfn.yaml
+++ b/rag-cfn.yaml
@@ -10,7 +10,7 @@ Parameters:
   KeyName:
     Type: String
     Default: RAG-Key-CFN
-    Description: 'Key Pair name for SSH access'
+    Description: 'Key Pair name for SSH access (must exist)'
 
   LatestAmiId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
@@ -18,13 +18,7 @@ Parameters:
     Description: 'Latest Ubuntu Server 20.04 LTS AMI'
 
 Resources:
-  # 1. SSH Key Pair
-  RAGKeyPair:
-    Type: AWS::EC2::KeyPair
-    Properties:
-      KeyName: !Ref KeyName
-
-  # 2. Security Group (Virtual Firewall)
+  # 1. Security Group (Virtual Firewall)
   RAGSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -41,13 +35,13 @@ Resources:
           CidrIp: 0.0.0.0/0
           Description: 'API port for RAG service'
 
-  # 3. EC2 Instance with User Data
+  # 2. EC2 Instance with User Data
   RAGInstance:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: !Ref InstanceType
       ImageId: !Ref LatestAmiId
-      KeyName: !Ref RAGKeyPair
+      KeyName: !Ref KeyName
       SecurityGroupIds:
         - !Ref RAGSecurityGroup
       Tags:
@@ -61,27 +55,41 @@ Resources:
         Fn::Base64: |
           #!/bin/bash
           # AWS RAG Laboratory - EC2 Ubuntu Initialization Script
+          # This script runs automatically when the EC2 instance starts
+          # It installs Docker and deploys the RAG application using Docker Compose
 
           # 1. Update system and install basic dependencies
           sudo apt update -y
           sudo apt upgrade -y
-          sudo apt install -y python3 python3-pip git
+          sudo apt install -y ca-certificates curl gnupg lsb-release git
 
-          # 2. Upgrade Python package manager
-          sudo pip3 install --upgrade pip
+          # 2. Install Docker
+          # Add Docker's official GPG key
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
 
-          # 3. Clone the RAG demo project
-          # NOTE: Replace with your actual GitHub repository URL
-          # git clone https://github.com/your_username/your_rag_project.git /home/ubuntu/rag-demo
-          # chown -R ubuntu:ubuntu /home/ubuntu/rag-demo
-          # cd /home/ubuntu/rag-demo
+          # Add Docker repository
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
-          # 4. Install Python libraries from requirements.txt
-          # sudo pip3 install -r requirements.txt
+          # Install Docker Engine
+          sudo apt update -y
+          sudo apt install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
-          # 5. Run the API in background
-          # For the lab we use a simple development server
-          # nohup python3 app.py &
+          # Start and enable Docker service
+          sudo systemctl start docker
+          sudo systemctl enable docker
+
+          # Add ubuntu user to docker group (optional, for convenience)
+          sudo usermod -aG docker ubuntu
+
+          # 3. Clone the RAG project from GitHub
+          cd /home/ubuntu
+          git clone https://github.com/PAlejandroQ/Puc_RAG.git rag-demo
+          chown -R ubuntu:ubuntu rag-demo
+          cd rag-demo
+
+          # 4. Start the RAG application using Docker Compose
+          # This will build and start all services: Ollama, Elasticsearch, and the FastAPI app
+          sudo docker compose up --build -d
 
 Outputs:
   InstanceId:
@@ -95,12 +103,6 @@ Outputs:
     Value: !GetAtt RAGInstance.PublicIp
     Export:
       Name: !Sub '${AWS::StackName}-PublicIP'
-
-  KeyPairName:
-    Description: 'Created Key Pair name'
-    Value: !Ref RAGKeyPair
-    Export:
-      Name: !Sub '${AWS::StackName}-KeyPair'
 
   SecurityGroupId:
     Description: 'Security Group ID'
