Enhance CloudFormation scripts for SSH key management and instance configuration
- Updated `cleanup-cfn.sh` to delete both AWS and local SSH key files during cleanup.
- Modified `deploy-cfn.sh` to create a new SSH key pair, ensuring no conflicts with existing keys.
- Adjusted `rag-cfn.yaml` to specify block device mappings for the EC2 instance, improving storage configuration.

--- a/rag-cfn.yaml
+++ b/rag-cfn.yaml
@@ -44,6 +44,12 @@ Resources:
       KeyName: !Ref KeyName
       SecurityGroupIds:
         - !Ref RAGSecurityGroup
+      BlockDeviceMappings:
+        - DeviceName: /dev/sda1
+          Ebs:
+            VolumeSize: 20
+            VolumeType: gp2
+            DeleteOnTermination: true
       Tags:
         - Key: Name
           Value: RAG-CFN-Instance
