Add CloudFormation scripts for deployment and SSH connection
- Introduced `deploy-cfn.ps1` for creating the RAG infrastructure, including SSH key management and deployment of the CloudFormation stack.
- Added `cleanup-cfn.ps1` for automated cleanup of resources created by the CloudFormation stack.
- Created `ssh-connect.ps1` to retrieve the public IP from the CloudFormation stack and connect via SSH, with enhanced security for key permissions.
- Updated `rag-cfn.yaml` to comment out unnecessary commands for cloning the RAG project and starting the application, streamlining the initialization process.

--- a/rag-cfn.yaml
+++ b/rag-cfn.yaml
@@ -89,13 +89,13 @@ Resources:
 
           # 3. Clone the RAG project from GitHub
           cd /home/ubuntu
-          git clone https://github.com/PAlejandroQ/Puc_RAG.git rag-demo
-          chown -R ubuntu:ubuntu rag-demo
-          cd rag-demo
+          # git clone https://github.com/PAlejandroQ/Puc_RAG.git rag-demo
+          # chown -R ubuntu:ubuntu rag-demo
+          # cd rag-demo
 
           # 4. Start the RAG application using Docker Compose
           # This will build and start all services: Ollama, Elasticsearch, and the FastAPI app
-          sudo docker compose up --build -d
+          # sudo docker compose up --build -d
 
 Outputs:
   InstanceId:
